Fix CI errors